# circom-helpers

./: Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: rolling.yml
ark-serde-compat/: CHANGELOG.md  Cargo.toml  README.md
ark-serde-compat/src/: babyjubjub.rs  bn254.rs  impl_macro.rs  lib.rs  test.rs
circom-types/: CHANGELOG.md  Cargo.toml  README.md
circom-types/src/: binfile.rs  lib.rs  r1cs.rs  traits.rs  witness.rs
circom-types/src/groth16/: mod.rs  proof.rs  public_input.rs  verification_key.rs  zkey.rs
circom-types/src/plonk/: mod.rs  proof.rs  verification_key.rs  zkey.rs
groth16/: CHANGELOG.md  Cargo.toml  README.md
groth16-material/: CHANGELOG.md  Cargo.toml
groth16-material/src/: circom.rs
groth16-sol/: CHANGELOG.md  Cargo.toml  README.md
groth16-sol/src/: lib.rs
groth16-sol/templates/: bn254_verifier.sol
groth16/benches/: groth16.rs
groth16/src/: lib.rs  reduction.rs
