[package]
name = "taceo-ark-serde-compat"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "Various serde compatibility implementations for arkworks-rs types, supporting both human-readable formats (JSON with decimal strings) and non-human readable formats (binary serialization using ark-serialize with compressed mode). The design choices are heavily influenced to work with Circom."
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[dependencies]
ark-babyjubjub = { workspace = true, optional = true }
ark-bls12-381 = { workspace = true, optional = true }
ark-bn254 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize = { workspace = true }
serde.workspace = true

[dev-dependencies]
bincode = { workspace = true, features = ["serde"] }
ciborium.workspace = true
rand.workspace = true
serde_json.workspace = true

[features]
default = []
babyjubjub = ["dep:ark-babyjubjub"]
bls12-381 = ["dep:ark-bls12-381"]
bn254 = ["dep:ark-bn254"]
full = ["babyjubjub", "bls12-381", "bn254"]
