[package]
name = "taceo-groth16-material"
version = "0.2.5"
edition.workspace = true
rust-version.workspace = true
description = "A collection of utilities for generating witnesses and proofs for Groth16 circuits. Supports Circom circuits for now."
readme = "./README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["circom", "groth16", "zero-knowledge", "zk"]

[package.metadata.cargo-all-features]
skip_feature_sets = [
  ["reqwest", "reqwest-blocking"],
]
max_combination_size = 2

[dependencies]
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true, optional = true }
circom-types = { package = "taceo-circom-types", path = "../circom-types", version = "0.2.4", features = [
  "bn254",
  "groth16",
  "zkey"
], default-features = false }
circom-witness-rs = { workspace = true, optional = true }
eyre = { workspace = true }
groth16 = { package = "taceo-groth16", path = "../groth16", version = "0.1.2" }
hex = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
ruint = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = ["circom"]
circom = [
  "dep:ark-serialize",
  "dep:circom-witness-rs",
  "dep:hex",
  "dep:postcard",
  "dep:ruint",
  "dep:sha2"
]
full = ["circom"]
reqwest = ["dep:reqwest"]
reqwest-blocking = ["reqwest/blocking"]
