[package]
name = "taceo-groth16-sol"
version = "0.1.0"
description = "Generation of Solidity verifiers for Groth16 zkSNARKs, based on the Groth16 verifier template from gnark."
keywords = ["zkSNARKs", "Groth16", "Solidity", "verifier"]
readme = "./README.md"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
exclude = ["/data"]

[dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
askama = {version = "0.14.0", optional = true}
eyre.workspace = true
alloy-primitives = "1"
ruint = { workspace = true, features = ["ark-ff-05"] }

[dev-dependencies]
circom-types.workspace = true
serde_json.workspace = true

[features]
default = ["template"]
template = ["askama"]
