[package]
name = "taceo-groth16-sol"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "Generation of Solidity verifiers for Groth16 zkSNARKs, based on the Groth16 verifier template from gnark."
readme = "./README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["Groth16", "Solidity", "verifier", "zkSNARKs"]
exclude = ["/data"]

[[bin]]
name = "groth16-sol-utils"
path = "src/bin/groth16-sol-utils.rs"
required-features = ["bin"]

[dependencies]
alloy-primitives.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
askama = { version = "0.15.4", optional = true }
circom-types = { package = "taceo-circom-types", path = "../circom-types", version = "0.2.4", optional = true, default-features = false, features=["groth16", "proof", "public-input","verification-key"] }
clap = { workspace = true, features = ["derive"], optional = true }
eyre.workspace = true
ruint = { workspace = true, features = ["ark-ff-05"] }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
circom-types = { package = "taceo-circom-types", path = "../circom-types", version = "0.2.4" }
rand.workspace = true
serde_json.workspace = true

[features]
default = ["template"]
bin = ["dep:circom-types", "dep:clap", "dep:serde_json", "template"]
template = ["dep:askama"]
